# magemines2

./: .coverage  .env.sample  .gitignore  CLAUDE.md  Makefile  PRD.md  feature_status.md  main.py  playtest.md  pyproject.toml  requirements.txt  test_connectivity.py  test_doors.py  test_spell_effects.py  test_town_connectivity.py  workflow.md
.claude/: settings.local.json
.claude/agents/: code-change-planner.md  junior-game-dev.md  lore-ai-integrator.md  performance-optimizer.md
.obsidian/: workspace.json
config/: ai.json  combat.json  debug.json  display.json  divine_powers.json  entities.json  game.json  map_generation.json  overrides.example.json  performance.json  resources.json  ui.json
docs/: CONFIGURATION.md  CONFIG_IMPLEMENTATION_SUMMARY.md  PERFORMANCE.md  REVIEW1.md  SPELLS_SUGGESTIONS.md  cleanup_report.md  playtest.md
examples/: config_usage.py
game/: entities.py  game_loop.py  input_handler.py
logs/: pre_tool_use.json
map_samples/: cave_sample.txt  dungeon_sample.txt  large_dungeon_sample.txt  small_dungeon_sample.txt  town_sample.txt
scripts/: generate_default_configs.py  test_multilevel.py  visualize_map.py
src/magemines/: __init__.py  __main__.py
src/magemines/core/: __init__.py  config.py  events.py  logging_config.py  performance.py  state.py  terminal.py
src/magemines/game/: components.py  demo_handler.py  dungeon_level.py  entities.py  entity_system.py  game_loop.py  game_renderer.py  input_handler.py  level_manager.py  map.py  map_generator.py  optimized_map.py  player.py  resources.py
src/magemines/game/data/: __init__.py  spells.py
src/magemines/game/entities/: __init__.py  mages.py
src/magemines/ui/: __init__.py  colors.py  header_bar.py  inventory_display.py  layout_manager.py  loading_overlay.py  message_log_viewer.py  message_pane.py
tests/: __init__.py  conftest.py  debug_town_issue.py  test_all_generators.py  test_cave_doors.py  test_comprehensive_fixes.py  test_connectivity_issues.py  test_corridor_debug.py  test_deep_levels.py  test_final_fixes.py  test_header_redraw.py  test_map_visualization.py  test_player_spawn_connectivity.py  test_room_connectivity.py
tests/map_outputs/: dense_dungeon_20250725_130122_0.txt  dense_dungeon_20250725_130122_1.txt  dense_dungeon_20250725_130122_2.txt  game_config_20250725_130122_0.txt  game_config_20250725_130122_1.txt  game_config_20250725_130122_2.txt  medium_dungeon_20250725_130122_0.txt  medium_dungeon_20250725_130122_1.txt  medium_dungeon_20250725_130122_2.txt  small_dungeon_20250725_130122_0.txt  small_dungeon_20250725_130122_1.txt  small_dungeon_20250725_130122_2.txt
tests/unit/: __init__.py  test_colors.py  test_config.py  test_event_system.py  test_game_layout.py  test_game_state.py  test_input_handler.py  test_level_manager.py  test_loading_overlay.py  test_map_connectivity.py  test_map_generation.py  test_map_generator.py  test_message_pane.py  test_message_scrolling.py  test_terminal_abstraction.py
(+10 files in other folders)
